--- a/AutomateMapping/AutomateMapping.csproj
+++ b/AutomateMapping/AutomateMapping.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\icons.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.dll</HintPath>
@@ -213,6 +216,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\icons8-circled-4-36bk.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
